# DrawingOnAir

./: .gitignore  CMakeLists.txt  README.md
apps/drawtool/: CMakeLists.txt  Makefile  Manual.doc  main.cpp  run
apps/forceserver/: AnisotropicFilterEffect.H  AnisotropicFilterEffect.cpp  CMakeLists.txt  ForceEffect.H  ForceEffect.cpp  ForceServer.H  ForceServer.bat  ForceServer.cpp  HybridDrawingEffect.H  HybridDrawingEffect.cpp  ICubeXDevice.H  ICubeXDevice.cpp  Makefile  Midi.H  Midi.cpp  OneHandDrawingEffect.H  OneHandDrawingEffect.cpp  SoundBase.H  SoundOpenAL.H  SoundOpenAL.cpp  SoundSDL.H  SoundSDL.cpp  TapeDrawingEffect.H  TapeDrawingEffect.cpp  main.cpp  run
cmake/: AutoBuildMinVR.cmake  AutoBuildVRG3DBase.cmake  DrawingOnAirConfig.cmake.in
cmake/Modules/: FindMinVR.cmake  FindOpenHaptics.cmake  FindSpaceNav.cmake  FindVRG3D.cmake  FindVRG3DBase.cmake
scripts/: drawing-on-air_ivlab-cave.bat
share/bat/: ptepol2r09_processedData_ws.csv
share/config/: cavepainting-VR.cfg  cavepainting-batdata-cave.cfg  cavepainting-batdata-harrisonmuscles.cfg  cavepainting-batdata.cfg  cavepainting-cave.cfg  cavepainting-cavefront.cfg  cavepainting-common.cfg  cavepainting-desktop.cfg  cavepainting-dive.cfg  cavepainting-fishtank.cfg  cavepainting-fishtankphantom.cfg  cavepainting-heartdata.cfg  cavepainting-samsungdisponly.cfg  cavepainting-samsungphantom.cfg  cavepainting-spinnaker.cfg  drawingstudy-common.cfg  forceserver-cit304.cfg  forceserver-cit411.cfg  forceserver-umn.cfg  snapshot.cfg  splinefit-fishtank.cfg
share/images/: brushtips.psd  menu-layerpalette.tga  patterns-lores.psd
share/promptMarks/: arm_0.3DArt  armbone_0.3DArt  armmuscle_0.3DArt  backmuscle_0.3DArt  bone_0.3DArt  bone_1.3DArt  bone_2.3DArt  bone_3.3DArt  bone_4.3DArt  bone_5.3DArt  bone_6.3DArt  bone_7.3DArt  bone_8.3DArt  bone_9.3DArt  butt_0.3DArt  butt_1.3DArt  butt_2.3DArt  butt_3.3DArt  fwing_0.3DArt  fwing_1.3DArt  fwing_10.3DArt  fwing_11.3DArt  fwing_12.3DArt  fwing_13.3DArt  fwing_14.3DArt  fwing_15.3DArt  fwing_2.3DArt  fwing_3.3DArt  fwing_4.3DArt  fwing_5.3DArt  fwing_6.3DArt  fwing_7.3DArt  fwing_8.3DArt  fwing_9.3DArt  fwingdetail_0.3DArt  fwingdetail_1.3DArt  fwingdetail_2.3DArt  fwingdetail_3.3DArt  leg_0.3DArt  leg_1.3DArt  (+32 more)
src/: .gitignore  AnnotationMark.H  AnnotationMark.cpp  AnnotationModel.H  AnnotationModel.cpp  Artwork.H  Artwork.cpp  ArtworkIO.H  ArtworkIO.cpp  BlendHCI.H  BlendHCI.cpp  Brush.H  Brush.cpp  BrushModelPicker.H  BrushModelPicker.cpp  BrushSizePicker.H  BrushSizePicker.cpp  BrushState.H  BrushState.cpp  BrushTipPicker.H  BrushTipPicker.cpp  CMakeLists.txt  CavePainting.H  CavePainting.cpp  CavePaintingCursors.H  CavePaintingCursors.cpp  ColorPicker.H  ColorPicker.cpp  ColorSwatchPicker.H  ColorSwatchPicker.cpp  CopyToNextFrameHCI.H  CopyToNextFrameHCI.cpp  DeleteHCI.H  DeleteHCI.cpp  DirectDrawHCI.H  DirectDrawHCI.cpp  DragDrawHCI.H  DragDrawHCI.cpp  DrawOnAir.H  DrawingStudy.H  (+87 more)
src/shaders/: PointLine.glsl.vrt  PointModelBillboard.glsl.vrt  PointModelSprite.glsl.frg  PointModelSprite.glsl.vrt
tracingstudy/: Instructions.doc  Makefile  Poster.doc  Questionnaire.doc  ScoreTrials.H  ScoreTrials.cpp  SteeringOutput.cpp  SteeringOutput2.cpp  SteeringStudy.H  SteeringStudy.cpp  TracingTrial.H  TracingTrial.cpp  main.cpp  run  training-script.doc
